# NativeC

./: README.md  build-profile.json5  log.txt
AppScope/: app.json5
AppScope/resources/base/element/: string.json
AppScope/resources/base/media/: app_layered_image.json
egl/: Index.ets  build-profile.json5  oh-package-lock.json5  oh-package.json5
egl/src/main/: module.json5
egl/src/main/cpp/: CMakeLists.txt  napi_init.cpp
egl/src/main/cpp/example/: BaseExample.cpp  BaseExample.h  EBORectangleExample.cpp  EBORectangleExample.h  TriangleExample.cpp  TriangleExample.h  VAOTriangleExample.cpp  VAOTriangleExample.h  VBOTriangleExample.cpp  VBOTriangleExample.h
egl/src/main/cpp/include/: EglCore.h  EglRender.h  native_common.h
egl/src/main/cpp/render/: EglCore.cpp  EglRender.cpp
egl/src/main/cpp/types/libegl/: index.d.ts  oh-package.json5
egl/src/main/cpp/util/: GLUtil.cpp  GLUtil.h
egl/src/main/ets/components/: Contants.ets  GLComponent.ets
egl/src/ohosTest/: module.json5
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/entrybackupability/: EntryBackupAbility.ets
entry/src/main/ets/pages/: Index.ets  LiveViewButton.ets  LiveViewUtil.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/media/: layered_image.json
entry/src/mock/: Libentry.mock.ets
